package be.isims.ihm.dp.tp4.ex2.code;

public interface Observeur {
    void setFenetre(BanqueFrm f);
    void update();
    void getInfos();
}
