@startuml

title __CODE's Class Diagram__\n

  namespace be.isims.ihm.dp.tp4.ex2.code {
    class be.isims.ihm.dp.tp4.ex2.code.Banque {
        - lesComptes : ArrayList<Compte>
        + addCompte()
        + collectionComptes()
        + getCompte()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex2.code {
    class be.isims.ihm.dp.tp4.ex2.code.BanqueFrm {
        - historique : JTextArea
        - liste : JComboBox<Compte>
        - radioButtons : JRadioButton[]
        - valeur : JTextField
        + BanqueFrm()
        + addToHistorique()
        + getCompteSelectionne()
        + getOperation()
        + getValeur()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex2.code {
    abstract class be.isims.ihm.dp.tp4.ex2.code.Compte {
        # denomination : String
        # solde : double
        + Compte()
        + Compte()
        + depot()
        + getDenomination()
        + retrait()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex2.code {
    class be.isims.ihm.dp.tp4.ex2.code.CompteCourant {
        + CompteCourant()
        + CompteCourant()
        + retrait()
        + toString()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex2.code {
    class be.isims.ihm.dp.tp4.ex2.code.CompteEpargne {
        - taux : double
        + CompteEpargne()
        + CompteEpargne()
        + calculInterets()
        + getInterets()
        + getTaux()
        + toString()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex2.code {
    class be.isims.ihm.dp.tp4.ex2.code.ComptePayant {
        + ComptePayant()
        + ComptePayant()
        + depot()
        + retrait()
        + toString()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex2.code {
    class be.isims.ihm.dp.tp4.ex2.code.Main {
        {static} + main()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex2.code {
    interface be.isims.ihm.dp.tp4.ex2.code.Observeur {
        {abstract} + getInfos()
        {abstract} + setFenetre()
        {abstract} + update()
    }
  }
  

  be.isims.ihm.dp.tp4.ex2.code.BanqueFrm -up-|> javax.swing.JFrame
  be.isims.ihm.dp.tp4.ex2.code.BanqueFrm o-- be.isims.ihm.dp.tp4.ex2.code.Banque : banque
  be.isims.ihm.dp.tp4.ex2.code.CompteCourant -up-|> be.isims.ihm.dp.tp4.ex2.code.Compte
  be.isims.ihm.dp.tp4.ex2.code.CompteEpargne -up-|> be.isims.ihm.dp.tp4.ex2.code.Compte
  be.isims.ihm.dp.tp4.ex2.code.ComptePayant -up-|> be.isims.ihm.dp.tp4.ex2.code.Compte


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
